day2-config/network-policies/deny-all-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: baseline-policies
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
